classDiagram
    HomeController ..> Stats : uses
    AuthController ..> User : uses
    QuizController ..> Question : uses
    QuizController ..> Achievement : uses
    QuizController ..> User : uses
    LeaderboardController ..> Leaderboard : uses
    AdminController ..> Question : uses

    class HomeController {
        +home()
    }

    class AuthController {
        +loginView()
        +registerView()
        +login()
        +register()
        +logout()
        -validateRegistration()
    }

    class QuizController {
        +startView()
        +playView()
        +resultView()
        +start()
        +play()
        -calculateXp()
        -requireAuth()
    }

    class LeaderboardController {
        +leaderboardView()
    }

    class AdminController {
        +dashboard()
        +questionsView()
        +editQuestionView()
        +addQuestion()
        +editQuestion()
        +deleteQuestion()
        +categoriesView()
        +addCategory()
        +editCategory()
        +deleteCategory()
        -requireAdmin()
    }

    class User {
        -PDO pdo
        +fetchById()
        +fetchByName()
        +create()
        +addXp()
    }

    class Question {
        -PDO pdo
        +fetchQuestion()
        +fetchQuestions()
        +fetchAll()
        +countQuestions()
        +fetchAnswers()
        +fetchAnswer()
        +fetchCorrectAnswer()
        +fetchCategories()
        +fetchDifficulties()
        +fetchRandomCategoryId()
        +beginSession()
        +completeSession()
        +saveResult()
        +addQuestion()
        +editQuestion()
        +deleteQuestion()
        +addCategory()
        +editCategory()
        +deleteCategory()
    }

    class Stats {
        -PDO pdo
        +fetchByPlayer()
    }

    class Achievement {
        -PDO pdo
        +award()
        +fetchAll()
        +fetchByPlayer()
        -fetchUnlocked()
        -unlock()
        -checkCompletedQuizzes()
        -checkTotalAnswers()
        -checkCorrectAnswers()
        -checkPerfectQuiz()
        -checkCategoriesPlayed()
    }

    class Leaderboard {
        -PDO pdo
        +fetchByXp()
        +fetchByCorrectAnswers()
        +fetchByAchievements()
        +fetchByCompletion()
    }